// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render with border prop (and hollow) 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #0588cb;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: #0588cb;
  font-size: 16px;
}

.c0:hover {
  color: #f8f9fa;
  background-color: #0588cb;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with fontSize prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #0588cb;
  border-radius: 20px;
  font-size: 22px;
}

.c0:hover {
  color: #0588cb;
  background-color: #f8f9fa;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="2"
/>
`;

exports[`Button render with hollow prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #0588cb;
  background-color: transparent;
  border-radius: 20px;
  border-width: 1px;
  border-style: solid;
  border-color: #0588cb;
  font-size: 16px;
}

.c0:hover {
  color: #f8f9fa;
  background-color: #0588cb;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with inverted prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #0588cb;
  background-color: #f8f9fa;
  border-radius: 20px;
  font-size: 16px;
}

.c0:hover {
  color: #f8f9fa;
  background-color: #0588cb;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with margin prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #0588cb;
  border-radius: 20px;
  margin: 8px;
  font-size: 16px;
}

.c0:hover {
  color: #0588cb;
  background-color: #f8f9fa;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
/>
`;

exports[`Button render with width prop 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #0588cb;
  border-radius: 20px;
  width: 100%;
  font-size: 16px;
}

.c0:hover {
  color: #0588cb;
  background-color: #f8f9fa;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
  width="1"
/>
`;

exports[`Button renders 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: inline-block;
  text-align: center;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: inherit;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  color: #f8f9fa;
  background-color: #0588cb;
  border: 0;
  border-radius: 4px;
  font-size: 22px;
  font-weight: 700;
  color: #f8f9fa;
  background-color: #0588cb;
  border-radius: 20px;
  font-size: 16px;
}

.c0:hover {
  color: #0588cb;
  background-color: #f8f9fa;
}

.c0:disabled {
  opacity: 0.5;
}

<button
  class="c0"
  font-size="1"
/>
`;
